Adição pag 3 e inserção de link pag 1

--- a/Exercicio1.html
+++ b/Exercicio1.html
@@ -9,8 +9,8 @@
     <h2>Exemplo HTML 5</h2>
     <p>Neste exemplo usamos tags (marcadores) básicos. <br/> Veja outros exemplos em:</p>
     <ul>
-        <li a href="Exercicio2.html">Exemplo Tabela</li>
-        <li href="">Exemplo Imagens</li>
+        <li><a href="Exercicio2.html">Exemplo Tabela</a></li>
+        <li><a href="Exercicio3.html">Exemplo Imagens</a></li>
     </ul>
     <hr/>
 
