Mesclagem de celula

--- a/Exercicio2.html
+++ b/Exercicio2.html
@@ -19,7 +19,7 @@
         </thead>
         <tfoot>
             <tr>
-                <td>A pagar</td>
+                <td colspan="2">A pagar</td>
                 <td>6</td>
                 <td>R$203,49</td>
             </tr>
