--- a/Exercicio3.html
+++ b/Exercicio3.html
@@ -6,6 +6,12 @@
     <title>Exercício 3</title>
 </head>
 <body>
-    <h1>Em montagem...</h1>
+    <h1>Exemplo com imagens</h1>
+    <p>Imagem 1:</p>
+    <img src="imagens/img1.jpg">
+    <p>Imagem 2:</p>
+    <img src="imagens/img2.jpg">
+    <p>Imagem 3:</p>
+    <img src="imagens/img3.jpg">
 </body>
 </html>
